--- a/online.html
+++ b/online.html
@@ -33,59 +33,59 @@
         </div>
         <section id="veh">
             <article data-aos="fade-up">
-                <img src="/img/ss_1.jpg" alt="super_sport_1">
+                <img src="../img/ss_1.jpg" alt="super_sport_1">
                 <span>Dewbauchee Champion</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/ss_2.jpg" alt="super_sport_2">
+                <img src="../img/ss_2.jpg" alt="super_sport_2">
                 <span>Pegassi Ignus</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/s_1.jpg" alt="sport_1">
+                <img src="../img/s_1.jpg" alt="sport_1">
                 <span>Annis Elegy rétro custom</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/s_2.jpg" alt="sport_2">
+                <img src="../img/s_2.jpg" alt="sport_2">
                 <span>Dinka Blista Compact</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/moto_1.jpg" alt="moto_1">
+                <img src="../img/moto_1.jpg" alt="moto_1">
                 <span>Nagasaki Shotaro</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/moto_2.jpg" alt="moto_2">
+                <img src="../img/moto_2.jpg" alt="moto_2">
                 <span>Nagasaki Shinobi</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/bateau_1.jpg" alt="bateau_1">
+                <img src="../img/bateau_1.jpg" alt="bateau_1">
                 <span>Bateau de patrouille Kurtz 31</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/bateau_2.jpg" alt="bateau_2">
+                <img src="../img/bateau_2.jpg" alt="bateau_2">
                 <span>RUNE Kosatka</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/bateau_3.jpg" alt="bateau_3">
+                <img src="../img/bateau_3.jpg" alt="bateau_3">
                 <span>Kraken Submersibles Avisa</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/bateau_4.jpg" alt="bateau_4">
+                <img src="../img/bateau_4.jpg" alt="bateau_4">
                 <span>Speedophile Seashark Garde-côte</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/avion_1.jpg" alt="avion_1">
+                <img src="../img/avion_1.jpg" alt="avion_1">
                 <span>B-11 Strikeforce</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/avion_2.jpg" alt="avion_2">
+                <img src="../img/avion_2.jpg" alt="avion_2">
                 <span>Buckingham Luxor Deluxe</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/avion_3.jpg" alt="avion_3">
+                <img src="../img/avion_3.jpg" alt="avion_3">
                 <span>Buckingham Miljet</span>
             </article>
             <article data-aos="fade-up">
-                <img src="/img/avion_4.jpg" alt="avion_4">
+                <img src="../img/avion_4.jpg" alt="avion_4">
                 <span>Buckingham Pyro</span>
             </article>
         </section>
